fixed font sizing on tablet width screen

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -21,7 +21,8 @@ $ai-white: #fff;
 /*TEXT SIZES*/
 /* Screen Sizes */
 $lg-screen: 15px;
-$md-screen: 15px;
+$md-screen: 14px;
+$sm-screen: 14px;
 
 /* Full Screen Width Text Sizes */
 $full-width--xs: .9rem;
